--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,46 @@
 html,body {
 	padding : 0px;
 	margin: 0px;
+	height: 100%;
+	width: 100%;
 	border: none;
 }
 
-table {
-  height: 550px;
+.wrapper {
+	box-shadow: 7px 5px 12px 2px #a9a9a9;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: -275px;
+	top: 50%;
+	width: 500px;
+	height: 550px;
+}
+
+.scoreBoard {
+	width: 225px;
+	background: green;
+}
+
+table#tableTetris {
   width: 275px;
   border-spacing: 0;
 	border: 1px solid black;
   border-collapse: collapse;
+	float: right;
 }
 
-table td {
+table#tableTetris td {
   border: 1px solid black;
+}
+
+.floatRight {
+	float: right;
+}
+
+.relativeElement {
+	position: relative;
+}
+
+.heightHundred {
+	height: 100%;
 }
