--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,31 @@ html,body {
 	border: none;
 }
 
+.loader {
+	height: 100%;
+	width: 100%;
+	top:0%;
+	transition: top 0.5s ease;
+	background: white;
+	position: absolute;
+	z-index: 999;
+}
+
+.loader.remove {
+	top:-100%
+}
+
+.spinny {
+	height: 100px;
+	width: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: -50px; 
+	top : 50%;
+	background: url(../images/gear.gif);
+	background-position: center center;
+}
+
 .wrapper {
 	box-shadow: 0px 5px 18px 5px #a9a9a9;
 	margin-left: auto;
