--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ html,body {
 	transition: top 0.5s ease;
 	background: white;
 	position: absolute;
-	z-index: 999;
+	z-index: 1;
 }
 
 .loader.remove {
@@ -60,6 +60,7 @@ div.controlDetails div:last-child span:hover {
 
 .wrapper {
 	box-shadow: 0px 5px 18px 5px #a9a9a9;
+	overflow: hidden;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: -275px;
